# PsicoAcustica

./: .gitignore  Cargo.toml  Dockerfile  README.md
migrations/2020-11-16-193629_create_comments/: up.sql
src/: actions.rs  main.rs  models.rs  schema.rs
static/: credits.html  game.html  index.html  progress.html
static/game/: index.html
static/infographics/: info01.html  info02.html  info03.html  info04.html  info05.html
static/styles/: style.css
templates/: comments.html
