[package]
name = "psico_server"
version = "0.1.0"
authors = ["Victor Lopez <A01336434@itesm.mx>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.4"
chrono = "0.4"
diesel = { version = "^1.1.0", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4.0"
dotenv = "0.15"
env_logger = "0.7"
failure = "0.1.8"
futures = "0.3.1"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }